Corrige URL vers les scripts

--- a/templates/article.html
+++ b/templates/article.html
@@ -9,8 +9,8 @@
         <title>{{ ARTICLE_TITLE }} – {{ SITE_TITLE }}</title>
         <meta name="description" content="{{ ARTICLE_DESCRIPTION }}" />
 
-        <script src="https://next.flus.io/static/stimulus.min.js" defer></script>
-        <script src="https://next.flus.io/static/popup.js" defer></script>
+        <script src="{{ SITE_URL_FLUS }}/static/stimulus.min.js" defer></script>
+        <script src="{{ SITE_URL_FLUS }}/static/popup.js" defer></script>
 
         <meta property="og:title" content="{{ ARTICLE_TITLE }}" />
         <meta property="og:type" content="article" />
