--- a/templates/page.html
+++ b/templates/page.html
@@ -9,8 +9,8 @@
         <title>{{ PAGE_TITLE }} – {{ SITE_TITLE }}</title>
         <meta name="description" content="{{ PAGE_DESCRIPTION }}" />
 
-        <script src="https://next.flus.io/static/stimulus.min.js" defer></script>
-        <script src="https://next.flus.io/static/popup.js" defer></script>
+        <script src="{{ SITE_URL_FLUS }}/static/stimulus.min.js" defer></script>
+        <script src="{{ SITE_URL_FLUS }}/static/popup.js" defer></script>
 
         <meta name="twitter:card" content="summary">
         <meta property="og:title" content="{{ PAGE_TITLE }}" />
