--- a/templates/blog.html
+++ b/templates/blog.html
@@ -9,8 +9,8 @@
         <title>{{ SITE_TITLE }}, {{ SITE_SUBTITLE }}</title>
         <meta name="description" content="Le carnet de flus est un blog retraçant la vie de Flus, un média social citoyen destiné à apaiser notre relation face à l’information." />
 
-        <script src="https://next.flus.io/static/stimulus.min.js" defer></script>
-        <script src="https://next.flus.io/static/popup.js" defer></script>
+        <script src="{{ SITE_URL_FLUS }}/static/stimulus.min.js" defer></script>
+        <script src="{{ SITE_URL_FLUS }}/static/popup.js" defer></script>
 
         <meta name="twitter:card" content="summary">
         <meta property="og:title" content="{{ SITE_TITLE }}" />
