--- a/templates/article.html
+++ b/templates/article.html
@@ -157,7 +157,7 @@
 
             <p class="copyright">
                 Copyright © Flus 2020, <a href="https://github.com/flusio/flus.fr/blob/master/LICENSE.txt">AGPL-3.0</a><br />
-                <a href="{{ SITE_URL_FLUS }}contact">Contact</a>&nbsp;·&nbsp;<a href="{{ SITE_URL_FLUS }}credits">Crédits</a>&nbsp;·&nbsp;<a href="https://github.com/flusio">Code source</a>
+                <a href="https://status.flus.io/">Statut du service</a>&nbsp;·&nbsp;<a href="{{ SITE_URL_FLUS }}contact">Contact</a>&nbsp;·&nbsp;<a href="{{ SITE_URL_FLUS }}credits">Crédits</a>&nbsp;·&nbsp;<a href="https://github.com/flusio">Code source</a>
             </p>
         </footer>
     </body>
