Ajoute la balise twitter:site pour les Twitter Cards

--- a/templates/article.html
+++ b/templates/article.html
@@ -17,6 +17,7 @@
         <meta property="og:description" content="{{ ARTICLE_DESCRIPTION }}" />
         <meta property="og:locale" content="fr_FR" />
         <meta property="og:url" content="{{ SITE_URL }}{{ ARTICLE_SLUG }}.html" />
+        <meta name="twitter:site" content="{{ SITE_TWITTER }}">
         {% if 'ARTICLE_ILLUSTRATION' in globals() %}
             <meta property="og:image" content="{{ SITE_URL }}{{ ARTICLE_ILLUSTRATION }}" />
             <meta name="twitter:card" content="summary_large_image">
