--- a/templates/page.html
+++ b/templates/page.html
@@ -19,6 +19,7 @@
         <meta property="og:locale" content="fr_FR" />
         <meta property="og:url" content="{{ SITE_URL }}{{ PAGE_SLUG }}.html" />
         <meta property="og:image" content="{{ SITE_URL }}{{ PAGE_ILLUSTRATION }}" />
+        <meta name="twitter:site" content="{{ SITE_TWITTER }}">
     </head>
 
     <body class="layout layout--page">
