--- a/templates/blog.html
+++ b/templates/blog.html
@@ -19,6 +19,7 @@
         <meta property="og:locale" content="fr_FR" />
         <meta property="og:url" content="{{ SITE_URL }}" />
         <meta property="og:image" content="{{ SITE_URL }}logo.svg" />
+        <meta name="twitter:site" content="{{ SITE_TWITTER }}">
     </head>
 
     <body class="layout layout--index">
