--- a/static/style.css
+++ b/static/style.css
@@ -321,6 +321,43 @@ figure {
     }
 }
 
+.screenshot {
+    position: relative;
+
+    margin-top: var(--space-large);
+    margin-bottom: var(--space-large);
+    padding: 0.5rem;
+
+    background: linear-gradient(135deg, var(--color-purple-1) 25%, var(--color-turquoise-1) 100%);
+    border-radius: 0.75em;
+    box-shadow: 1px 1px 4px 2px var(--color-grey-2);
+}
+
+.screenshot::before {
+    content: '';
+
+    position: absolute;
+    top: 0;
+    left: 0;
+
+    width: 1.5em;
+    height: 1.5em;
+    padding: calc(var(--space-medium) * 1.5);
+
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: 1.5em;
+    background-image: url("icons/media/camera-line.svg");
+    background-color: var(--color-purple-1);
+    border-radius: 0.75em 0 0.75em 0;
+}
+
+.screenshot__image {
+    margin: 0;
+
+    border-radius: 0.75em;
+}
+
 .popup {
     position: relative;
 
