--- a/templates/article.html
+++ b/templates/article.html
@@ -20,10 +20,10 @@
         <meta name="twitter:site" content="{{ SITE_TWITTER }}">
         {% if 'ARTICLE_ILLUSTRATION' in globals() %}
             <meta property="og:image" content="{{ SITE_URL }}{{ ARTICLE_ILLUSTRATION }}" />
-            <meta name="twitter:card" content="summary_large_image">
         {% else %}
-            <meta name="twitter:card" content="summary">
+            <meta property="og:image" content="{{ SITE_URL }}card.png" />
         {% endif %}
+        <meta name="twitter:card" content="summary_large_image">
     </head>
 
     <body class="layout layout--article">
