--- a/templates/blog.html
+++ b/templates/blog.html
@@ -18,7 +18,8 @@
         <meta property="og:description" content="Le carnet de flus est un blog retraçant la vie de Flus, un média social citoyen destiné à apaiser notre relation face à l’information." />
         <meta property="og:locale" content="fr_FR" />
         <meta property="og:url" content="{{ SITE_URL }}" />
-        <meta property="og:image" content="{{ SITE_URL }}logo.svg" />
+        <meta property="og:image" content="{{ SITE_URL }}card.png" />
+        <meta name="twitter:card" content="summary_large_image">
         <meta name="twitter:site" content="{{ SITE_TWITTER }}">
     </head>
 
