--- a/templates/page.html
+++ b/templates/page.html
@@ -140,17 +140,15 @@
             </p>
 
             <p class="paragraph--center">
-                Flus, c’est également un agrégateur de flux <abbr>RSS</abbr>. Intéressé&nbsp;?<br />
-                <a href="https://flus.io">Accéder à Flus 1</a>
+                <a href="{{ SITE_URL_FLUS }}contact">Contact</a>&nbsp;·&nbsp;<a href="{{ SITE_URL_FLUS }}securite">Sécurité</a>&nbsp;·&nbsp;<a href="{{ SITE_URL_FLUS }}credits">Crédits</a>&nbsp;·&nbsp;<a href="{{ SITE_URL_FLUS }}mentions-legales">Mentions légales</a>
             </p>
 
-            <p>
-                <a href="{{ SITE_URL_FLUS }}mentions-legales">mentions légales</a>
+            <p class="paragraph--center">
+                <a href="https://flus.io">Accéder à Flus 1</a>&nbsp;·&nbsp;<a href="https://status.flus.io/">Statut des services</a>
             </p>
 
             <p class="copyright">
-                Copyright © Flus 2020, <a href="https://github.com/flusio/flus.fr/blob/main/LICENSE.txt">AGPL-3.0</a><br />
-                <a href="{{ SITE_URL_FLUS }}contact">Contact</a>&nbsp;·&nbsp;<a href="{{ SITE_URL_FLUS }}securite">Sécurité</a>&nbsp;·&nbsp;<a href="https://status.flus.io/">Statut du service</a>&nbsp;·&nbsp;<a href="{{ SITE_URL_FLUS }}credits">Crédits</a>&nbsp;·&nbsp;<a href="https://github.com/flusio">Code source</a>
+                Licence libre <a href="https://github.com/flusio/flus.fr/blob/main/LICENSE.txt">AGPL-3.0</a> (<a href="https://github.com/flusio">code source</a>)
             </p>
         </footer>
     </body>
