--- a/templates/page.html
+++ b/templates/page.html
@@ -23,6 +23,10 @@
     </head>
 
     <body class="layout layout--page">
+        <a class="no-mobile accessibility-nav call-to-action" href="#contenu" tabindex="0" data-controller="skip-nav" data-action="skip-nav#skip">
+            Sauter au contenu
+        </a>
+
         <header class="layout__header">
             <nav class="nav">
                 <details
@@ -58,6 +62,12 @@
                         </li>
 
                         <li class="popup__item">
+                            <a class="popup__link" href="{{ SITE_URL_FLUS }}visite">
+                                Visite
+                            </a>
+                        </li>
+
+                        <li class="popup__item">
                             <a class="popup__link" href="{{ SITE_URL_FLUS }}projet">
                                 Projet
                             </a>
@@ -89,6 +99,12 @@
                 <div class="nav__space"></div>
 
                 <ul class="nav__container no-mobile">
+                    <li class="nav__item ">
+                        <a class="nav__link" href="{{ SITE_URL_FLUS }}visite">
+                            Visite
+                        </a>
+                    </li>
+
                     <li class="nav__item ">
                         <a class="nav__link" href="{{ SITE_URL_FLUS }}projet">
                             Projet
