Masque les vieux articles derrière un <details>

--- a/static/style.css
+++ b/static/style.css
@@ -115,6 +115,14 @@ body {
     background-color: var(--color-body);
 }
 
+details + details {
+    margin-top: var(--space-medium);
+}
+
+details summary {
+    cursor: pointer;
+}
+
 a {
     color: inherit;
     text-decoration: underline;
