--- a/templates/blog.html
+++ b/templates/blog.html
@@ -139,32 +139,64 @@
                     <a href="{{ SITE_URL }}abonnement.html">Suivre le carnet</a>
                 </p>
 
-                {% for year, articles in ARTICLES_BY_YEAR %}
-                    <h2>{{ year }}</h2>
+                {% set first_year_articles = next(ARTICLES_BY_YEAR) %}
 
-                    <ul class="articles">
-                        {% for article in articles %}
-                            {% if 'ARTICLE_TAGS' in article.meta and 'featured' in article.meta['ARTICLE_TAGS'] %}
-                                <li class="articles__item articles__item--featured">
-                                    <span class="articles__date">{{ article.date().strftime("%d %b") }}</span>
+                <h2>{{ first_year_articles[0] }}</h2>
 
+                <ul class="articles">
+                    {% for article in first_year_articles[1] %}
+                        {% if 'ARTICLE_TAGS' in article.meta and 'featured' in article.meta['ARTICLE_TAGS'] %}
+                            <li class="articles__item articles__item--featured">
+                                <span class="articles__date">{{ article.date().strftime("%d %b") }}</span>
+
+                                <a class="articles__title" href="{{ article.url() }}">
+                                    {{ article.title() }}
+                                </a>
+                            </li>
+                        {% else %}
+                            <li class="articles__item">
+                                <span class="articles__date">{{ article.date().strftime("%d %b") }}</span>
+
+                                <div class="articles__container">
                                     <a class="articles__title" href="{{ article.url() }}">
                                         {{ article.title() }}
                                     </a>
-                                </li>
-                            {% else %}
-                                <li class="articles__item">
-                                    <span class="articles__date">{{ article.date().strftime("%d %b") }}</span>
+                                </div>
+                            </li>
+                        {% endif %}
+                    {% endfor %}
+                </ul>
 
-                                    <div class="articles__container">
+                <h2>Archives</h2>
+
+                {% for year, articles in ARTICLES_BY_YEAR %}
+                    <details>
+                        <summary>{{ year }}</summary>
+
+                        <ul class="articles">
+                            {% for article in articles %}
+                                {% if 'ARTICLE_TAGS' in article.meta and 'featured' in article.meta['ARTICLE_TAGS'] %}
+                                    <li class="articles__item articles__item--featured">
+                                        <span class="articles__date">{{ article.date().strftime("%d %b") }}</span>
+
                                         <a class="articles__title" href="{{ article.url() }}">
                                             {{ article.title() }}
                                         </a>
-                                    </div>
-                                </li>
-                            {% endif %}
-                        {% endfor %}
-                    </ul>
+                                    </li>
+                                {% else %}
+                                    <li class="articles__item">
+                                        <span class="articles__date">{{ article.date().strftime("%d %b") }}</span>
+
+                                        <div class="articles__container">
+                                            <a class="articles__title" href="{{ article.url() }}">
+                                                {{ article.title() }}
+                                            </a>
+                                        </div>
+                                    </li>
+                                {% endif %}
+                            {% endfor %}
+                        </ul>
+                    </details>
                 {% endfor %}
 
                 <img
