--- a/templates/page.html
+++ b/templates/page.html
@@ -11,6 +11,7 @@
 
         <script src="{{ SITE_URL_FLUS }}static/stimulus.min.js" defer></script>
         <script src="{{ SITE_URL_FLUS }}static/popup.js" defer></script>
+        <script defer data-domain="flus.fr" src="https://plausible.io/js/script.js"></script>
 
         <meta property="og:title" content="{{ PAGE_TITLE }}" />
         <meta property="og:type" content="website" />
