--- a/templates/blog.html
+++ b/templates/blog.html
@@ -11,6 +11,7 @@
 
         <script src="{{ SITE_URL_FLUS }}static/stimulus.min.js" defer></script>
         <script src="{{ SITE_URL_FLUS }}static/popup.js" defer></script>
+        <script defer data-domain="flus.fr" src="https://plausible.io/js/script.js"></script>
 
         <meta name="twitter:card" content="summary">
         <meta property="og:title" content="{{ SITE_TITLE }}" />
