--- a/templates/blog.html
+++ b/templates/blog.html
@@ -228,7 +228,7 @@
             </p>
 
             <p class="paragraph--center">
-                <a href="https://flus.io">Accéder à Flus 1</a>&nbsp;·&nbsp;<a href="https://status.flus.io/">Statut des services</a>
+                <a href="https://rss.flus.fr">Accéder à FreshRSS</a>&nbsp;·&nbsp;<a href="https://status.flus.fr/">Statut des services</a>
             </p>
 
             <p class="copyright">
