--- a/templates/page.html
+++ b/templates/page.html
@@ -102,7 +102,7 @@
                 </nav>
 
                 <div class="header__logo">
-                    <a href="{{ SITE_URL_FLUS }}">
+                    <a href="{{ SITE_URL_FLUS }}" title="Flus - Accueil" rel="home">
                         <img
                             src="{{ SITE_URL }}logo-white.svg"
                             height="40"
@@ -128,7 +128,7 @@
             <nav class="layout__breadcrumb" aria-label="Fil d’Ariane">
                 <ul class="list--nostyle">
                     <li class="breadcrumb__item">
-                        <a class="breadcrumb__link" href="{{ SITE_URL_FLUS }}">
+                        <a class="breadcrumb__link" href="{{ SITE_URL_FLUS }}" rel="home">
 
                             Accueil
                         </a>
