fix: Fix the config of Plausible

--- a/templates/blog.html
+++ b/templates/blog.html
@@ -14,7 +14,7 @@
         <script src="{{ SITE_URL_FLUS }}static/js/stimulus.min.js" defer></script>
         <script src="{{ SITE_URL_FLUS }}static/js/main.js" defer></script>
 
-        <script src="https://plausible.io/js/script.js" defer data-domain="{{ SITE_URL_FLUS }}"></script>
+        <script src="https://plausible.io/js/script.js" defer data-domain="{{ SITE_DOMAIN_FLUS }}"></script>
 
         <meta property="og:title" content="{{ SITE_TITLE }}" />
         <meta property="og:type" content="website" />
