a11y: Ajoute un lien vers le plan du site

--- a/templates/page.html
+++ b/templates/page.html
@@ -215,6 +215,12 @@
 
                     <ul class="list--nostyle list--inline text--small text--center">
                         <li>
+                            <a class="footer__link" href="{{ SITE_URL_FLUS }}plan-du-site">
+                                Plan du site
+                            </a>
+                        </li>
+
+                        <li>
                             <a class="footer__link" href="{{ SITE_URL_FLUS }}mentions-legales">
                                 Mentions légales
                             </a>
