a11y: Improve markup of home links in footer

--- a/templates/page.html
+++ b/templates/page.html
@@ -167,7 +167,7 @@
             <footer class="layout__footer" role="contentinfo">
                 <div class="wrapper wrapper--larger wrapper--center flow flow--large">
                     <div class="cols cols--center cols--gap-large">
-                        <a href="{{ SITE_URL_FLUS }}">
+                        <a href="{{ SITE_URL_FLUS }}" title="Flus - Accueil" rel="home">
                             <img
                                 class="footer__logo"
                                 alt="Flus"
