Ajoute les liens vers les réseaux sociaux

--- a/templates/blog.html
+++ b/templates/blog.html
@@ -375,6 +375,22 @@
                         </li>
                     </ul>
 
+                    <p class="text--center">
+                        Retrouvez Flus sur
+
+                        <a class="footer__link" rel="me" href="https://www.linkedin.com/company/flus-fr">
+                            <img width="25" alt="" src="{{ SITE_URL_FLUS }}static/icon-linkedin.svg" />
+                            LinkedIn
+                        </a>
+
+                        et
+
+                        <a class="footer__link" rel="me" href="https://piaille.fr/@flus">
+                            <img width="25" alt="" src="{{ SITE_URL_FLUS }}static/icon-mastodon.svg" />
+                            Mastodon
+                        </a>
+                    </p>
+
                     <p class="footer__license text--small text--center">
                         Licence libre
 
