Ajoute le tag fediverse:creator

--- a/templates/blog.html
+++ b/templates/blog.html
@@ -23,6 +23,7 @@
         <meta property="og:url" content="{{ SITE_URL }}" />
         <meta property="og:image" content="{{ SITE_URL }}card.png" />
         <meta name="twitter:card" content="summary_large_image">
+        <meta name="fediverse:creator" content="@flus@piaille.fr" />
     </head>
 
     <body>
