--- a/templates/page.html
+++ b/templates/page.html
@@ -27,6 +27,7 @@
             <meta property="og:image" content="{{ SITE_URL }}card.png" />
         {% endif %}
         <meta name="twitter:card" content="summary">
+        <meta name="fediverse:creator" content="@flus@piaille.fr" />
     </head>
 
     <body>
