--- a/templates/page.html
+++ b/templates/page.html
@@ -216,14 +216,8 @@
 
                     <ul class="list--nostyle list--inline text--small text--center">
                         <li>
-                            <a class="footer__link" href="{{ SITE_URL_FLUS }}plan-du-site">
-                                Plan du site
-                            </a>
-                        </li>
-
-                        <li>
-                            <a class="footer__link" href="{{ SITE_URL_FLUS }}mentions-legales">
-                                Mentions légales
+                            <a class="footer__link" href="{{ SITE_URL_FLUS }}credits">
+                                Crédits
                             </a>
                         </li>
 
@@ -234,14 +228,14 @@
                         </li>
 
                         <li>
-                            <a class="footer__link" href="{{ SITE_URL_FLUS }}credits">
-                                Crédits
+                            <a class="footer__link" href="{{ SITE_URL_FLUS }}informations-legales">
+                                Informations légales
                             </a>
                         </li>
 
                         <li>
-                            <a class="footer__link" href="https://rss.flus.fr">
-                                Accéder à FreshRSS
+                            <a class="footer__link" href="{{ SITE_URL_FLUS }}plan-du-site">
+                                Plan du site
                             </a>
                         </li>
 
