--- a/templates/page.html
+++ b/templates/page.html
@@ -10,9 +10,8 @@
         <link rel="canonical" href="{{ SITE_URL }}">
         <link rel="alternate" href="{{ SITE_URL }}feeds/all.atom.xml" type="application/atom+xml" title="Articles de {{ SITE_TITLE }}" />
 
-        <link rel="stylesheet" href="{{ SITE_URL_FLUS }}static/style/main.css">
-        <script src="{{ SITE_URL_FLUS }}static/js/stimulus.min.js" defer></script>
-        <script src="{{ SITE_URL_FLUS }}static/js/main.js" defer></script>
+        <link rel="stylesheet" href="{{ SITE_URL_FLUS }}static/assets/stylesheets/application.css">
+        <script src="{{ SITE_URL_FLUS }}static/assets/javascripts/application.js" defer></script>
 
         <script src="https://plausible.io/js/script.js" defer data-domain="{{ SITE_DOMAIN_FLUS }}"></script>
 
