--- a/templates/blog.html
+++ b/templates/blog.html
@@ -363,6 +363,12 @@
                         </li>
 
                         <li>
+                            <a class="footer__link" href="https://github.com/flusio">
+                                Code source
+                            </a>
+                        </li>
+
+                        <li>
                             <a class="footer__link" href="https://status.flus.fr">
                                 Statut des services
                             </a>
